--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "archiver": "^0.15.1",
     "aws-sdk": "^2.2.0",
     "googleapis": "^2.1.3",
+    "localenvironment": "^1.0.0",
     "musthave": "^1.0.1",
     "request": "^2.61.0",
     "wrench": "^1.5.8"
